--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MyStudy">
+        </activity>
+        <activity android:name=".MyStudyRoom">
+        </activity>
+        <activity android:name=".Login">
+        </activity>
+        <activity android:name=".MyStudyWeekly">
+        </activity>
     </application>
 
 </manifest>
