--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,11 +29,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.android.material:material:1.2.1'
+    //toolbar
     implementation 'com.android.support:appcompat-v7:30.0.2'
+    //tablayout
+    implementation 'com.google.android.material:material:1.2.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
 
     //room
     def room_version = "2.2.6"
