개인페이지, 프로필 편집 분리

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,8 +60,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:10.2.1'
     implementation 'com.google.firebase:firebase-database:19.6.0'
     implementation 'com.firebaseui:firebase-ui-database:7.1.1'
-}
 
+    // CircleImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+}
 buildscript {
     repositories {
         google()
