--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,24 +11,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".ProfileEditActivity"></activity>
+        <activity android:name=".HomeActivity"></activity>
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".MyStudyRoom">
-
-        </activity>
-        <activity android:name=".MakeRoom"></activity>
-        <activity android:name=".HomeActivity">
+        <activity android:name=".MyStudyRoom"></activity>
+        <activity android:name=".MakeRoom" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity">
-        </activity>
-
+        <activity android:name=".LoginActivity"></activity>
     </application>
 
 </manifest>
