--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,11 @@
         </activity>
         <activity android:name=".LoginActivity">
         </activity>
+        <activity android:name=".MakeRoom">
+        </activity>
+        <activity android:name=".ProfileEditActivity">
+        </activity>
+
         <provider android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.studyproject.fileprovider"
             android:exported="false"
