--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,12 +42,14 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-storage:19.2.2'
+    implementation 'androidx.wear:wear:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     //cardview
     implementation "androidx.cardview:cardview:1.0.0"
+    compileOnly 'com.google.android.wearable:wearable:2.6.0'
 
     //room
     def room_version = "2.2.6"
