비밀번호 재설정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.example.studyproject">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <!--<uses-feature android:name="android.hardware.type.watch" />-->
+
+   <!-- <uses-feature android:name="android.hardware.type.watch" /> -->
     <uses-permission android:name="android.permission.INTERNET" /> <!-- 카메라, 내부 저장소 접근 권한 설정 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -34,6 +35,7 @@
             android:name="com.google.android.wearable.standalone"
             android:value="true" />
 
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -42,10 +44,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".HomeActivity"></activity>
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".SettingActivity"></activity>
-        <activity android:name=".SearchDetail"></activity>
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".SettingActivity" />
+        <activity android:name=".SearchDetail" />
+        <activity android:name=".FindPwActivity"/>
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -57,7 +60,7 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <activity android:name=".MakeRoom"></activity>
+        <activity android:name=".MakeRoom" />
     </application>
 
 </manifest>
