개인 스터디룸 리사이클러뷰(1)

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,13 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://www.jitpack.io" }
+    }
+}
+
+buildscript {
+    repositories {
+        maven { url "https://www.jitpack.io" }
     }
 }
 
