--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,13 +31,16 @@ android {
 }
 
 dependencies {
+    //photoview
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.android.material:material:1.2.1'
     //toolbar
-    implementation 'com.android.support:appcompat-v7:30.0.2'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
     //tablayout
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
