--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-storage:19.2.2'
     implementation 'androidx.wear:wear:1.0.0'
+    implementation 'com.google.firebase:firebase-messaging:21.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -78,6 +79,9 @@ dependencies {
 
     //firebase storage
     implementation 'com.google.firebase:firebase-storage:19.2.2'
+
+    //firebase cloud messaging
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
 
     // CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
