--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,10 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
 
+    buildFeatures{
+        viewBinding true
+    }
+
     defaultConfig {
         applicationId "com.example.studyproject"
         minSdkVersion 26
@@ -91,6 +95,9 @@ dependencies {
 
     //glide 이미지 로딩
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+
+    implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.3.4'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.4'
 }
 buildscript {
     repositories {
