--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".HomeActivity" />
+        <activity android:name=".HomeActivity"
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".LoginActivity" />
         <activity android:name=".SettingActivity" />
         <activity android:name=".SearchDetail" />
