--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,9 +83,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-database:7.1.1'
 
     //firebase storage
-    //implementation 'com.google.firebase:firebase-storage:19.2.2'
-    implementation 'com.google.firebase:firebase-storage:19.1.0'
-
+    implementation 'com.google.firebase:firebase-storage:19.2.2'
 
     //firebase cloud messaging
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
@@ -97,9 +95,12 @@ dependencies {
     implementation 'gun0912.ted:tedpermission:2.0.0'
 
     //glide 이미지 로딩
-    //implementation 'com.github.bumptech.glide:glide:4.9.0'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    //+ 이미지로딩
+//    compile 'com.google.firebase:firebase-storage:12.0.0'
+//    compile 'com.firebaseui:firebase-ui-storage:3.2.2'
+//    implementation 'com.github.bumptech.glide:glide:4.6.1'
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
 
 
     implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.3.4'
