--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,6 +109,9 @@ dependencies {
 
     //Gallery picasso
     implementation 'com.squareup.picasso:picasso:2.3.3'
+
+    implementation 'com.github.PhilJay:MpAndroidChart:v3.0.2'
+
 }
 buildscript {
     repositories {
