--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/bee_icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -51,6 +51,7 @@
         <activity android:name=".SearchDetail" />
         <activity android:name=".FindPwActivity" />
         <activity android:name=".image"/>
+        <activity android:name=".MakeRoom" android:windowSoftInputMode="adjustPan"/>
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -61,8 +62,6 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
-
-        <activity android:name=".MakeRoom" />
 
         <service android:name=".FirebasePushNotificationClass"
             android:enabled="true"
