--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,7 +61,8 @@
         <activity android:name=".SearchDetail" />
         <activity android:name=".FindPwActivity" />
         <activity android:name=".image" />
-        <activity android:name=".MakeRoom" android:windowSoftInputMode="adjustPan"/>
+        <activity android:name=".MakeRoom"
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name="PhotoStatActivity"/>
 
         <provider
