--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,38 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="true" />
+<!--    <queries>-->
+<!--        <intent>-->
+<!--            <action android:name="android.intent.action.VIEW" />-->
+
+<!--            <category android:name="android.intent.category.BROWSABLE" />-->
+
+<!--            <data android:scheme="https" />-->
+<!--        </intent>-->
+<!--    </queries>-->
 
     <queries>
+        <!-- Browser -->
         <intent>
             <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="http" />
+        </intent>
 
-            <category android:name="android.intent.category.BROWSABLE" />
+        <!-- Camera -->
+        <intent>
+            <action android:name="android.media.action.IMAGE_CAPTURE" />
+        </intent>
 
-            <data android:scheme="https" />
+        <!-- Gallery -->
+        <intent>
+            <action android:name="android.intent.action.GET_CONTENT" />
         </intent>
     </queries>
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false"
+        />
+
 
     <application
         android:allowBackup="true"
